fix some bags add text block
